[gd_scene load_steps=5 format=3 uid="uid://d6rcdd87c0xj"]

[ext_resource type="Script" path="res://game_components/GameScene2.gd" id="1_q8s7u"]
[ext_resource type="Texture2D" uid="uid://c660bpj6xdg03" path="res://art/UI/Complete_GUI_Essential_Pack_v2.2/02_Paper_Collection/01_Paper_Theme/Sprites/UI_Paper_Dropdown_Bar.png" id="3_dkirf"]
[ext_resource type="PackedScene" uid="uid://fvq6xrladdbx" path="res://characters/player_cat.tscn" id="3_u0h0f"]
[ext_resource type="Script" path="res://game_components/game_clock.gd" id="4_mk6cg"]

[node name="MainScene" type="Node2D"]
process_mode = 3
y_sort_enabled = true

[node name="GameScene" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("1_q8s7u")

[node name="PlayerCat" parent="GameScene" instance=ExtResource("3_u0h0f")]
y_sort_enabled = true
position = Vector2(982, 533)
rotation = -0.001385
sprint_multiplier = 3.0

[node name="CameraRemoteTransform2D" type="RemoteTransform2D" parent="GameScene/PlayerCat"]
rotation = 0.001385
remote_path = NodePath("../../Camera2D")

[node name="ClockRemoteTransform2D" type="RemoteTransform2D" parent="GameScene/PlayerCat"]
rotation = 0.001385
remote_path = NodePath("../../ClockCanvas")

[node name="Levels" type="Node2D" parent="GameScene"]
y_sort_enabled = true

[node name="Camera2D" type="Camera2D" parent="GameScene"]
position = Vector2(982, 533)

[node name="ClockCanvas" type="CanvasGroup" parent="GameScene"]
process_mode = 1
position = Vector2(982, 533)

[node name="UiPaperDropdownBar" type="Sprite2D" parent="GameScene/ClockCanvas"]
position = Vector2(219, -125)
texture = ExtResource("3_dkirf")

[node name="GameClock" type="Label" parent="GameScene/ClockCanvas"]
offset_left = 211.0
offset_top = -130.0
offset_right = 252.0
offset_bottom = -104.0
scale = Vector2(0.428263, 0.428263)
text = "07:00"
script = ExtResource("4_mk6cg")
hour_start = 12

[node name="GameTimer" type="Timer" parent="GameScene/ClockCanvas/GameClock"]

[connection signal="timeout" from="GameScene/ClockCanvas/GameClock/GameTimer" to="GameScene/ClockCanvas/GameClock" method="_on_game_timer_timeout"]
